--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,73 @@
  *= require_self
  *= require_tree .
  */
+{
+    --color-green-50: #E8F5E9;
+    --color-green-100: #C8E6C9;
+    --color-green-200: #A5D6A7;
+    --color-green-300: #81C784;
+    --color-green-400: #66BB6A;
+    --color-green-500: #4CAF50;
+    --color-green: #4CAF50;
+    --color-green-600: #43A047;
+    --color-green-700: #388E3C;
+    --color-green-800: #2E7D32;
+    --color-green-900: #1B5E20;
+    --color-green-a100: #B9F6CA;
+    --color-green-a200: #69F0AE;
+    --color-green-a400: #00E676;
+    --color-green-a700: #00C853;
+    --color-light-green-50: #F1F8E9;
+    --color-light-green-100: #DCEDC8;
+    --color-light-green-200: #C5E1A5;
+    --color-light-green-300: #AED581;
+    --color-light-green-400: #9CCC65;
+    --color-light-green-500: #8BC34A;
+    --color-light-green: #8BC34A;
+    --color-light-green-600: #7CB342;
+    --color-light-green-700: #689F38;
+    --color-light-green-800: #558B2F;
+    --color-light-green-900: #33691E;
+    --color-light-green-a100: #CCFF90;
+    --color-light-green-a200: #B2FF59;
+    --color-light-green-a400: #76FF03;
+    --color-light-green-a700: #64DD17;
+    --color-lime-50: #F9FBE7;
+    --color-lime-100: #F0F4C3;
+    --color-lime-200: #E6EE9C;
+    --color-lime-300: #DCE775;
+    --color-lime-400: #D4E157;
+    --color-lime-500: #CDDC39;
+    --color-lime: #CDDC39;
+    --color-lime-600: #C0CA33;
+    --color-lime-700: #AFB42B;
+    --color-lime-800: #9E9D24;
+    --color-lime-900: #827717;
+    --color-lime-a100: #F4FF81;
+    --color-lime-a200: #EEFF41;
+    --color-lime-a400: #C6FF00;
+    --color-lime-a700: #AEEA00;
+
+    --color-teal-50: #E0F2F1;
+    --color-teal-100: #B2DFDB;
+    --color-teal-200: #80CBC4;
+    --color-teal-300: #4DB6AC;
+    --color-teal-400: #26A69A;
+    --color-teal-500: #009688;
+    --color-teal: #009688;
+    --color-teal-600: #00897B;
+    --color-teal-700: #00796B;
+    --color-teal-800: #00695C;
+    --color-teal-900: #004D40;
+    --color-teal-a100: #A7FFEB;
+    --color-teal-a200: #64FFDA;
+    --color-teal-a400: #1DE9B6;
+    --color-teal-a700: #00BFA5;
+
+/* Main colors */
+    --color-primary: #42E0B8;
+    --color-primary-1: #ABF7E4;
+    --color-primary-2: #75EDCF;
+    --color-primary-3: #16D0A1;
+    --color-primary-4: #00B98A;
+}
