--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 	<% flash.each do |type, message| %>
 	<div class ="alert flash <%= type %>">
 		<%= message %>
-	</div>div>
+	</div>
 	<% end %>
 
 
